Set files to have group owner of www-data

--- a/salt/webserver/nginx/map.jinja
+++ b/salt/webserver/nginx/map.jinja
@@ -2,7 +2,7 @@
   'Ubuntu': {
     'available_site_configurations_dir': '/etc/nginx/sites-available',
     'file_dir': '/etc/nginx',
-    'file_group': 'root',
+    'file_group': 'www-data',
     'file_mode': '0644',
     'file_name': 'nginx.conf',
     'file_owner': 'root',
