--- a/salt/webserver/nginx/map.jinja
+++ b/salt/webserver/nginx/map.jinja
@@ -9,6 +9,19 @@
     'file_owner': 'root',
     'enabled_site_symlinks_dir': '/etc/nginx/sites-enabled',
     'package_name': 'nginx',
+    'repo_list_dir': '/etc/apt/sources.list.d',
+  },
+  'CentOS': {
+    'available_site_configurations_dir': '/etc/nginx/sites-available',
+    'dir_mode': '0755', 
+    'file_dir': '/etc/nginx',
+    'file_group': 'www-data',
+    'file_mode': '0644',
+    'file_name': 'nginx.conf',
+    'file_owner': 'root',
+    'enabled_site_symlinks_dir': '/etc/nginx/sites-enabled',
+    'package_name': 'nginx',
+    'repo_list_dir': '/etc/yum.repos.d',
   },
 }, grain='os') %}
 
