File owner is now www-data:www-data; Update Nginx conf to parameterize the same value

--- a/salt/webserver/nginx/map.jinja
+++ b/salt/webserver/nginx/map.jinja
@@ -6,7 +6,7 @@
     'file_group': 'www-data',
     'file_mode': '0644',
     'file_name': 'nginx.conf',
-    'file_owner': 'root',
+    'file_owner': 'www-data',
     'enabled_site_symlinks_dir': '/etc/nginx/sites-enabled',
     'package_name': 'nginx',
     'repo_list_dir': '/etc/apt/sources.list.d',
@@ -18,7 +18,7 @@
     'file_group': 'www-data',
     'file_mode': '0644',
     'file_name': 'nginx.conf',
-    'file_owner': 'root',
+    'file_owner': 'www-data',
     'enabled_site_symlinks_dir': '/etc/nginx/sites-enabled',
     'package_name': 'nginx',
     'repo_list_dir': '/etc/yum.repos.d',
